--- a/fossa-deps.yml
+++ b/fossa-deps.yml
@@ -1,4 +1,4 @@
 referenced-dependencies:
-  - type: pypi
-    name: requests
-    version: 2.31.0
+  - type: gem
+    name: rails
+    version: 7.1.0
