--- a/.github/workflows/fossa-scan.yml
+++ b/.github/workflows/fossa-scan.yml
@@ -27,6 +27,10 @@ jobs:
       # Loop over tags and scan each one
       - name: Scan release tags
         run: |
+          # Generate timestamp for this run
+          TIMESTAMP=$(date +"%Y%m%d-%H%M%S")
+          echo "Revision timestamp: $TIMESTAMP"
+          
           IFS=',' read -ra TAGS <<< "${{ github.event.inputs.release_tags }}"
           git fetch --tags
           for TAG in "${TAGS[@]}"; do
@@ -34,16 +38,20 @@ jobs:
             echo "Scanning tag: $TAG"
             echo "----------------------------"
             git checkout $TAG
-
-            # Optional: Convert dependencies if you have a conversion script
-            if [ -f fossa-deps-conversion.py ]; then
-              python fossa-deps-conversion.py
-              cat fossa-deps.json
+      
+            # Run preliminary analyze to check fossa-deps
+            OUTPUT=$(fossa analyze --output 2>&1)
+            echo "$OUTPUT"
+      
+            if echo "$OUTPUT" | grep -q '\* fossa-deps file analysis: succeeded'; then
+              echo "fossa-deps analysis succeeded, running full FOSSA analyze..."
+              fossa analyze --revision "$TIMESTAMP"
+              fossa test
+            else
+              echo "fossa-deps analysis failed, skipping full analyze for $TAG"
             fi
-
-            # Run FOSSA analysis
-            fossa analyze --output
-
+      
             echo "Finished scanning $TAG"
             echo ""
           done
+
