--- a/.github/workflows/fossa-scan.yml
+++ b/.github/workflows/fossa-scan.yml
@@ -45,8 +45,8 @@ jobs:
       
             if echo "$OUTPUT" | grep -q '\* fossa-deps file analysis: succeeded'; then
               echo "fossa-deps analysis succeeded, running full FOSSA analyze..."
-              fossa analyze --revision "$TIMESTAMP"
-              fossa test --revision "$TIMESTAMP"
+              fossa analyze --revision "${{ github.event.inputs.release_tags }}-$TIMESTAMP"
+              fossa test --revision "${{ github.event.inputs.release_tags }}-$TIMESTAMP"
             else
               echo "fossa-deps analysis failed, skipping full analyze for $TAG"
             fi
