--- a/.github/workflows/fossa-scan.yml
+++ b/.github/workflows/fossa-scan.yml
@@ -47,6 +47,9 @@ jobs:
               echo "fossa-deps analysis succeeded, running full FOSSA analyze..."
               fossa analyze --branch "${{ github.event.inputs.release_tags }}" --revision "${{ github.event.inputs.release_tags }}-$TIMESTAMP"
               fossa test --revision "${{ github.event.inputs.release_tags }}-$TIMESTAMP"
+
+               # create release
+              fossa release-group create-release --title "FOSSA Deps Releases" --release "${{ github.event.inputs.release_tags }}" --project-locator "custom+12948/github.com/cmboling/fossa-deps-releases" --project-revision "${{ github.event.inputs.release_tags }}-$TIMESTAMP" --project-branch "${{ github.event.inputs.release_tags }}"
             else
               echo "fossa-deps analysis failed, skipping full analyze for $TAG"
             fi
